# Deckr

./: .gitignore  README.md  index.html  package-lock.json  package.json  splashscreen.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  constants.ts  index.css  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  llm.rs  main.rs  settings.rs  slide.rs  storage.rs
src-tauri/src/agents/: animation_agent.rs  content_agent.rs  design_agent.rs  edit_agent.rs  html_agent.rs  lint.rs  mod.rs  orchestrator.rs
src-tauri/src/pptx/: animation_map.rs  builder.rs  mod.rs
src-tauri/src/tools/: mod.rs
src/components/: ChatInputArea.tsx  MessageList.tsx  SettingsModal.tsx  Sidebar.tsx  StartScreen.tsx  ThemePicker.tsx  TitleBar.tsx
src/hooks/: useLlm.ts  useResizable.ts  useSession.ts
src/lib/: utils.ts
src/services/: llm.ts  settings.ts  storage.ts
src/slide/: Preview.tsx  Viewer.tsx  animations.css  utils.ts
