[package]
name = "deckr"
version = "0.1.0"
description = "Deckr - AI-Powered Presentation Builder"
authors = []
edition = "2021"

[lib]
name = "deckr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-mcp-bridge = { version = "0.10.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
base64 = "0.22"
zip = "2"
uuid = { version = "1", features = ["v4"] }
scraper = "0.21"
urlencoding = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[features]
default = ["tauri-plugin-mcp-bridge"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
